# rust-web-kit

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/: .clone_count
.github/workflows/: main.yml
src/: db.rs  main.rs  templates.rs
static/: robots.txt
view/: index.hbs
